--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div id="sidebar-backdrop" class="fixed inset-0 bg-black/60 backdrop-blur-sm z-30 lg:hidden"></div>
     <aside id="sidebar" class="bg-bg-sidebar flex flex-col h-full border-r border-border-color">
-        <div class="p-4 border-b border-border-color flex justify-between items-center">
+        <div class="px-4 py-3 border-b border-border-color flex justify-between items-center">
             <h1 class="text-xl font-bold flex items-center">
                 <img src="/icon/favicon.svg" alt="Логотип MBOX" class="w-6 h-6 mr-2">MBOX
             </h1>
