--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div id="sidebar-backdrop" class="fixed inset-0 bg-black/60 backdrop-blur-sm z-30 lg:hidden"></div>
     <aside id="sidebar" class="bg-bg-sidebar flex flex-col h-full border-r border-border-color">
-        <div class="px-4 py-3 border-b border-border-color flex justify-between items-center">
+        <div class="h-14 px-4 border-b border-border-color flex justify-between items-center">
             <h1 class="text-xl font-bold flex items-center">
                 <img src="/icon/favicon.svg" alt="Логотип MBOX" class="w-6 h-6 mr-2">MBOX
             </h1>
@@ -75,7 +75,7 @@
     </aside>
 
     <main class="flex-grow flex flex-col h-full min-w-0">
-        <nav class="flex-shrink-0 border-b border-border-color flex items-center px-2">
+        <nav class="h-14 flex-shrink-0 border-b border-border-color flex items-center px-2">
             <button id="sidebar-toggle-btn" class="p-3 -ml-2 hover:bg-bg-element transition-colors border-r border-border-color">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
