--- a/index.html
+++ b/index.html
@@ -162,21 +162,17 @@
     </div>
     <div id="fullscreen-modal" class="modal-overlay hidden">
         <div id="fullscreen-modal-content" class="bg-bg-main p-4 md:p-6 rounded-lg shadow-2xl w-[95vw] h-[90vh] flex flex-col">
-            <!-- Блок с кнопками управления -->
-            <div class="flex-shrink-0 flex justify-end items-center mb-4 gap-2">
-                <!-- НОВАЯ КНОПКА -->
-                <button id="fullscreen-width-toggle" title="Расширить" class="p-2 rounded-full hover:bg-bg-element transition-colors">
-                    <i data-lucide="arrow-left-right" class="w-5 h-5"></i>
-                </button>
-                <!-- Существующая кнопка закрытия -->
-                <button id="fullscreen-modal-close" class="p-2 rounded-full hover:bg-bg-element transition-colors">
-                    <i data-lucide="x" class="w-6 h-6"></i>
-                </button>
-            </div>
-            <!-- У контейнера для контента теперь есть id -->
             <div id="fullscreen-modal-body" class="prose max-w-none flex-grow overflow-y-auto">
             </div>
         </div>
+        <!-- НОВАЯ КНОПКА ПЕРЕКЛЮЧЕНИЯ ШИРИНЫ -->
+        <button id="fullscreen-width-toggle" title="Расширить">
+            <i data-lucide="arrow-left-right" class="w-5 h-5"></i>
+        </button>
+        <!-- Ваша существующая кнопка закрытия -->
+        <button id="fullscreen-modal-close">
+            <i data-lucide="x" class="w-6 h-6"></i>
+        </button>
     </div>
     <div id="in-app-notification" class="fixed top-9 left-1/2 -translate-x-1/2 z-50 w-full max-w-md cursor-pointer transition-all duration-300 ease-in-out transform -translate-y-[150%] opacity-0 hidden" >
         <div class="bg-bg-sidebar rounded-lg shadow-2xl border border-accent/50 p-4 mx-4 flex items-start space-x-3">
@@ -623,7 +619,6 @@
             });
 
             const widthToggleBtn = document.getElementById('fullscreen-width-toggle');
-
             modalBody.classList.add('fullscreen-view-compact');
             widthToggleBtn.classList.remove('active');
             widthToggleBtn.title = 'Расширить';
@@ -635,6 +630,7 @@
                 const isNowCompact = modalBody.classList.toggle('fullscreen-view-compact');
                 newWidthToggleBtn.classList.toggle('active', !isNowCompact);
                 newWidthToggleBtn.title = isNowCompact ? 'Расширить' : 'Вернуть компактный вид';
+                lucide.createIcons({ nodes: [newWidthToggleBtn] });
             });
             
             modal.classList.remove('hidden');
