--- a/index.html
+++ b/index.html
@@ -2155,6 +2155,8 @@
 
             const fullscreenModal = document.getElementById('fullscreen-modal');
             const fullscreenCloseBtn = document.getElementById('fullscreen-modal-close');
+            const fullscreenWidthToggleBtn = document.getElementById('fullscreen-width-toggle'); 
+            const fullscreenModalBody = document.getElementById('fullscreen-modal-body');
             
             fullscreenCloseBtn?.addEventListener('click', hideFullscreenMessage);
             fullscreenModal?.addEventListener('click', (e) => {
