--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div id="fullscreen-modal-content" class="bg-bg-main p-4 md:p-6 rounded-lg shadow-2xl w-[95vw] h-[90vh] flex flex-col">
             <!-- Кнопки -->
             <div class="flex-shrink-0 flex justify-end items-center mb-4 gap-2">
-                <button id="fullscreen-width-toggle" title="Расширить" class="p-2 rounded-full hover:bg-bg-element transition-colors hidden lg:inline-flex items-center justify-center">
+               <button id="fullscreen-width-toggle" title="Расширить" class="hidden lg:inline-flex items-center justify-center p-2 rounded-full hover:bg-bg-element transition-colors">
                     <i data-lucide="arrow-left-right" class="w-5 h-5"></i>
                 </button>
                 <button id="fullscreen-modal-close" class="p-2 rounded-full hover:bg-bg-element transition-colors">
