--- a/index.html
+++ b/index.html
@@ -2533,6 +2533,7 @@
                         <h3 class="text-xl font-semibold mb-4 flex-shrink-0">Редактировать пайплайн</h3>
                         <form id="edit-pipeline-form" class="flex flex-col flex-grow min-h-0">
                             <!-- Блок с названием (не скроллится) -->
+                             <input type="hidden" id="edit-pipeline-id">
                             <div class="flex-shrink-0">
                                 <label for="edit-pipeline-name" class="text-sm text-text-secondary block mb-1">Название пайплайна</label>
                                 <input type="text" id="edit-pipeline-name" class="w-full bg-input p-2 rounded border border-border-color focus:outline-none focus:ring-2 focus:ring-accent" required>
