--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
             //contentDiv.className = 'flex-grow prose max-w-none mt-2 w-full'; 
             //contentDiv.className = 'flex-grow prose max-w-none mt-2 w-full flow-root';
             contentDiv.className = 'prose max-w-none mt-2 w-full';
-            let processedContent = (msg.content || '').replace(
+            let processedContent = String(msg.content || '').replace(
                 /<think>([\s\S]*?)<\/think>/g,
                 `<details><summary>Показать ход мыслей</summary><div>$1</div></details>`
             );
