--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                     <div class="pt-4 mt-4 border-t border-border-color">
                         <label for="pipeline-select" class="text-sm font-medium text-text-secondary block mb-1">Пайплайн</label>
                         <select id="pipeline-select" class="w-full bg-input border border-border-color rounded p-2 text-sm focus:outline-none focus:ring-2 focus:ring-accent">
-                            <option value="">Без пайплайна (одиночная модель)</option>
+                            <option value="">Не выбран</option>
                             ${pipelineOptions}
                         </select>
                     </div>
