--- a/index.html
+++ b/index.html
@@ -1509,26 +1509,21 @@
                     const cardEl = mdToggleBtn.closest('.note-card');
                     const textarea = cardEl.querySelector('.note-card-content');
                     const previewEl = cardEl.querySelector('.note-card-markdown-preview');
+                    
                     const isPreviewActive = cardEl.classList.toggle('markdown-preview-active');
+                    previewEl.classList.toggle('hidden', !isPreviewActive);
+
 
                     if (isPreviewActive) {
-                        // Включаем режим предпросмотра
                         const rawContent = textarea.value;
                         const rawHtml = marked.parse(rawContent, { breaks: true, gfm: true });
                         previewEl.innerHTML = DOMPurify.sanitize(rawHtml);
                         
-                        // Применяем подсветку синтаксиса, как в чате
                         previewEl.querySelectorAll('pre code').forEach((block) => {
                             hljs.highlightElement(block);
                         });
 
-                        textarea.classList.add('hidden');
-                        previewEl.classList.remove('hidden');
                     } else {
-                        // Выключаем режим предпросмотра
-                        previewEl.classList.add('hidden');
-                        textarea.classList.remove('hidden');
-                        // Важно пересчитать высоту поля, когда оно снова становится видимым
                         autoResizeTextarea(textarea);
                     }
                     return; 
