--- a/index.html
+++ b/index.html
@@ -561,8 +561,8 @@
         function getEmptyStateHTML(type) {
             const iconMap = {
                 'chat': 'message-square',
-                'notepad': 'notebook'
-                'diagram': 'git-fork'
+                'notepad': 'notebook',
+                'diagram': 'git-fork',
             };
             const textMap = {
                 'chat': 'Выберите чат или создайте новый',
