--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                     <div class="p-3 border-b border-border-color flex-shrink-0">
                         <input type="text" id="diagram-title-input" class="w-full bg-transparent font-bold text-lg focus:outline-none" value="${activeSession.title || ''}" placeholder="Название диаграммы">
                     </div>
-                    <textarea id="diagram-input" class="w-full h-full bg-input p-4 resize-none focus:outline-none font-mono text-sm">${code}</textarea>
+                    <textarea id="diagram-input" class="w-full flex-grow bg-input p-4 resize-none focus:outline-none font-mono text-sm">${code}</textarea>
                 </div>
         
                 <div id="diagram-preview-panel" class="relative flex flex-col w-full h-1/2 lg:w-1/2 lg:h-full min-h-0 overflow-hidden">
