--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                         <h3 class="font-semibold text-lg">Результат</h3>
                         <div id="diagram-error-container" class="text-xs text-red-400"></div>
                      </div>
-                     <div id="diagram-output" class="w-full h-full p-4 overflow-auto flex items-center justify-center bg-bg-main">
+                     <div id="diagram-output" class="w-full h-full p-4 overflow-hidden flex items-center justify-center bg-bg-main">
                      </div>
                 </div>
             </div>
