--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <body class="h-dvh w-full flex">
 
     <div id="sidebar-backdrop" class="fixed inset-0 bg-black/60 backdrop-blur-sm z-30 lg:hidden"></div>
-    <aside id="sidebar" class="bg-bg-sidebar flex flex-col h-full border-r border-border-color">
-        <div class="h-12 px-4 border-b border-border-color flex justify-between items-center">
+    <aside id="sidebar" class="bg-bg-sidebar flex flex-col h-full">
+        <div class="h-12 px-4 flex justify-between items-center">
             <h1 class="text-xl font-bold flex items-center">
                 <img src="/icon/favicon.svg" alt="Логотип MBOX" class="w-6 h-6 mr-2">MBOX
             </h1>
@@ -67,7 +67,7 @@
         </div>
         <nav id="sidebar-list" class="flex-grow overflow-y-auto p-2">
         </nav>
-        <div id="auth-section" class="p-3 border-t border-border-color text-center hidden">
+        <div id="auth-section" class="p-3 text-center hidden">
             <button id="google-signin-btn" class="w-full flex items-center justify-center bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-3 rounded transition-colors text-sm">
                 <svg class="w-4 h-4 mr-2" viewBox="0 0 48 48" fill="currentColor"><path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path><path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path><path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path><path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path><path fill="none" d="M0 0h48v48H0z"></path></svg>
                 Войти через Google
@@ -83,7 +83,7 @@
     </aside>
 
     <main class="flex-grow flex flex-col h-full min-w-0">
-        <nav class="h-12 flex-shrink-0 border-b border-border-color flex items-center px-2">
+        <nav class="h-12 flex-shrink-0 flex items-center px-2">
             <button id="sidebar-toggle-btn" class="p-3 -ml-2 hover:bg-bg-element transition-colors border-r border-border-color">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
