--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <main class="flex-grow flex flex-col h-full min-w-0">
         <nav class="h-12 flex-shrink-0 flex items-center px-2">
-            <button id="sidebar-toggle-btn" class="p-3 -ml-2 hover:bg-bg-element transition-colors border-r border-border-color">
+            <button id="sidebar-toggle-btn" class="p-3 -ml-2 hover:bg-bg-element transition-colors">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
             
