--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </aside>
 
     <main class="flex-grow flex flex-col h-full min-w-0">
-        <nav class="h-12 flex-shrink-0 border-b border-border-color flex items-center px-2 bg-panel">
+        <nav class="h-12 flex-shrink-0 border-b border-border-color flex items-center px-2" style="background-color: var(--bg-sidebar);">
             <button id="sidebar-toggle-btn" class="p-3 -ml-2 hover:bg-bg-element transition-colors">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
