--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,7 @@
         
         function getSettingsViewHTML() {
             return `<div class="p-4 sm:p-6 space-y-4">
-                <!-- Настройа цвета -->
+                <!-- Аккордеон для Персонализации -->
                 <details class="bg-bg-sidebar rounded-lg border border-border-color transition-shadow hover:shadow-lg" open>
                     <summary class="p-4 cursor-pointer font-bold text-xl flex justify-between items-center hover:bg-bg-element rounded-t-lg">
                         <span class="flex items-center"><i data-lucide="palette" class="w-6 h-6 mr-3 text-accent"></i>Персонализация</span>
@@ -1213,7 +1213,7 @@
                         </div>
                     </div>
                 </details>
-                
+
                 <!-- Аккордеон для Провайдеров -->
                 <details class="bg-bg-sidebar rounded-lg border border-border-color transition-shadow hover:shadow-lg">
                     <summary class="p-4 cursor-pointer font-bold text-xl flex justify-between items-center hover:bg-bg-element rounded-t-lg">
@@ -1250,7 +1250,7 @@
                     </div>
                 </details>
 
-                <!-- НОВЫЙ Аккордеон для Пайплайнов -->
+                <!-- Аккордеон для Пайплайнов -->
                 <details class="bg-bg-sidebar rounded-lg border border-border-color transition-shadow hover:shadow-lg">
                     <summary class="p-4 cursor-pointer font-bold text-xl flex justify-between items-center hover:bg-bg-element rounded-t-lg">
                         <span class="flex items-center"><i data-lucide="route" class="w-6 h-6 mr-3 text-accent"></i>Конструктор пайплайнов</span>
