--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body class="h-dvh w-full flex">
 
     <div id="sidebar-backdrop" class="fixed inset-0 bg-black/60 backdrop-blur-sm z-30 lg:hidden"></div>
-    <aside id="sidebar" class="bg-panel flex flex-col h-full border-r border-border-color">
+    <aside id="sidebar" class="bg-panel flex flex-col h-full">
         <div class="h-12 px-4 flex justify-between items-center">
             <h1 class="text-xl font-bold flex items-center">
                 <img src="/icon/favicon.svg" alt="Логотип MBOX" class="w-6 h-6 mr-2">MBOX
@@ -83,7 +83,7 @@
     </aside>
 
     <main class="flex-grow flex flex-col h-full min-w-0">
-        <nav class="h-12 flex-shrink-0 flex items-center px-2 bg-panel border-b border-border-color">
+        <nav class="h-12 flex-shrink-0 flex items-center px-2 bg-panel">
             <button id="sidebar-toggle-btn" class="p-3 -ml-2 hover:bg-bg-element transition-colors">
                 <i id="sidebar-toggle-icon" data-lucide="panel-left-close" class="w-5 h-5"></i>
             </button>
