--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
         function getSettingsViewHTML() {
             return `<div class="p-4 sm:p-6 space-y-4">
                 <!-- Аккордеон для Персонализации -->
-                <details class="bg-bg-sidebar rounded-lg border border-border-color transition-shadow hover:shadow-lg" open>
+                <details class="bg-bg-sidebar rounded-lg border border-border-color transition-shadow hover:shadow-lg">
                     <summary class="p-4 cursor-pointer font-bold text-xl flex justify-between items-center hover:bg-bg-element rounded-t-lg">
                         <span class="flex items-center"><i data-lucide="palette" class="w-6 h-6 mr-3 text-accent"></i>Персонализация</span>
                         <i data-lucide="chevron-down" class="w-5 h-5 transition-transform details-arrow"></i>
